--- a/frontend/management/templates/employee.html
+++ b/frontend/management/templates/employee.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee Management</title>
-</head>
-<body>
+{% extends 'home.html' %}
+{% load static %}
+{% block content %}
+
+<div id="employeeContent">
     <h1>Employee Management</h1>
     <ul>
         {% for employee in employees %}
@@ -14,5 +11,6 @@
         <li>No employees found.</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+</div>
+
+{% endblock content %}
