--- a/frontend/management/templates/employee.html
+++ b/frontend/management/templates/employee.html
@@ -1,16 +1,86 @@
 {% extends 'home.html' %}
 {% load static %}
 {% block content %}
-
-<div id="employeeContent">
-    <h1>Employee Management</h1>
-    <ul>
-        {% for employee in employees %}
-        <li>{{ employee }}</li>
-        {% empty %}
-        <li>No employees found.</li>
-        {% endfor %}
-    </ul>
+<link rel="stylesheet" type="text/css" href="{% static 'css/employee.css' %}">
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2 vertical-nav-col">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action" id="viewEmployees">Employee List</a>
+                <a href="#" class="list-group-item list-group-item-action" id="viewFacilities">Employee Assignments</a>
+            </div>
+        </div>
+        <div class="col-md-10">
+            <div class="table-content">
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Employee ID</th>
+                                <th>SSN</th>
+                                <th>First Name</th>
+                                <th>Middle Name</th>
+                                <th>Last Name</th>
+                                <th>Street</th>
+                                <th>City</th>
+                                <th>State</th>
+                                <th>Zip</th>
+                                <th>Salary</th>
+                                <th>Date Hired</th>
+                                <th>Job Class</th>
+                                <th>Facility ID</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for employee in employees %}
+                            <tr>
+                                <td>{{ employee.EmployeeID }}</td>
+                                <td>{{ employee.SSN }}</td>
+                                <td>{{ employee.FirstName }}</td>
+                                <td>{{ employee.MiddleName }}</td>
+                                <td>{{ employee.LastName }}</td>
+                                <td>{{ employee.Street }}</td>
+                                <td>{{ employee.City }}</td>
+                                <td>{{ employee.State }}</td>
+                                <td>{{ employee.Zip }}</td>
+                                <td>{{ employee.Salary }}</td>
+                                <td>{{ employee.Date_Hired }}</td>
+                                <td>{{ employee.Job_Class }}</td>
+                                <td>{{ employee.Fac_ID }}</td>
+                            </tr>
+                            {% empty %}
+                            <tr>
+                                <td colspan="13">No employees found.</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<script>
+    // JavaScript to toggle table content visibility
+    document.getElementById('viewEmployees').addEventListener('click', function() {
+        document.querySelector('.table-content').style.display = 'block';
+        document.getElementById('viewEmployees').classList.add('active-tab');
+        document.getElementById('viewFacilities').classList.remove('active-tab');
+    });
+    document.getElementById('viewFacilities').addEventListener('click', function() {
+        document.querySelector('.table-content').style.display = 'none';
+        document.getElementById('viewFacilities').classList.add('active-tab');
+        document.getElementById('viewEmployees').classList.remove('active-tab');
+    });
+</script>
+
+<style>
+    /* Styling for the selected list item */
+    .list-group-item.active-tab {
+        background-color: #f0f0f0; /* Light grey background */
+        font-weight: bold; /* Bold text */
+    }
+</style>
 
 {% endblock content %}
