--- a/frontend/management/templates/employee.html
+++ b/frontend/management/templates/employee.html
@@ -6,14 +6,18 @@
     <div class="row">
         <div class="col-md-2 vertical-nav-col">
             <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action" id="viewEmployees">Employee List</a>
-                <a href="#" class="list-group-item list-group-item-action" id="viewFacilities">Employee Assignments</a>
+                <a href="#" class="list-group-item list-group-item-action" id="viewEmployees">All Employee</a>
+                <a href="#" class="list-group-item list-group-item-action" id="viewDoctor">Doctor</a>
+                <a href="#" class="list-group-item list-group-item-action" id="viewNurse">Nurse</a>
+                <a href="#" class="list-group-item list-group-item-action" id="viewAdStaff">Admin Staff</a>
+                <a href="#" class="list-group-item list-group-item-action" id="viewHCP">HCP</a>
+                <a href="#" class="list-group-item list-group-item-action" id="viewEmpAssigment">Employee Assignments</a>
             </div>
         </div>
         <div class="col-md-10">
-            <div class="table-content">
+            <div class="table-content" id="viewEmployees_content">
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
                                 <th>Employee ID</th>
@@ -57,30 +61,46 @@
                     </table>
                 </div>
             </div>
+            <div class="table-content" id="viewDoctor_content" style="display:none;">
+                <p>This is an example text for viewDoctor.</p>
+            </div>
+            <div class="table-content" id="viewNurse_content" style="display:none;">
+                <p>This is an example text for viewNurse.</p>
+            </div>
+            <div class="table-content" id="viewAdStaff_content" style="display:none;">
+                <p>This is an example text for viewAdminStaff.</p>
+            </div>
+            <div class="table-content" id="viewHCP_content" style="display:none;">
+                <p>This is an example text for viewHCP.</p>
+            </div>
+            <div class="table-content" id="viewEmpAssigment_content" style="display:none;">
+                <p>This is an example text for viewEmpAssigment.</p>
+            </div>
         </div>
     </div>
 </div>
 
 <script>
-    // JavaScript to toggle table content visibility
-    document.getElementById('viewEmployees').addEventListener('click', function() {
-        document.querySelector('.table-content').style.display = 'block';
-        document.getElementById('viewEmployees').classList.add('active-tab');
-        document.getElementById('viewFacilities').classList.remove('active-tab');
-    });
-    document.getElementById('viewFacilities').addEventListener('click', function() {
-        document.querySelector('.table-content').style.display = 'none';
-        document.getElementById('viewFacilities').classList.add('active-tab');
-        document.getElementById('viewEmployees').classList.remove('active-tab');
+    // JavaScript to toggle content visibility based on the selected list item
+    var listItems = document.querySelectorAll('.list-group-item');
+    listItems.forEach(function(item) {
+        item.addEventListener('click', function() {
+            var itemId = this.id;
+            var contentId = itemId + '_content';
+            var contentToShow = document.getElementById(contentId);
+            document.querySelectorAll('.table-content').forEach(function(content) {
+                content.style.display = 'none';
+            });
+            if (contentToShow) {
+                contentToShow.style.display = 'block';
+            }
+            listItems.forEach(function(listItem) {
+                listItem.classList.remove('active-tab');
+            });
+            this.classList.add('active-tab');
+        });
     });
 </script>
 
-<style>
-    /* Styling for the selected list item */
-    .list-group-item.active-tab {
-        background-color: #f0f0f0; /* Light grey background */
-        font-weight: bold; /* Bold text */
-    }
-</style>
 
 {% endblock content %}
