--- a/frontend/static/css/home.css
+++ b/frontend/static/css/home.css
@@ -1,12 +1,10 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0; 
 }
 header {
     background-color: #f90;
     color: #fff;
-    padding: 1px;
+    padding-top: 4px;
     text-align: center;
     font-size: 13px;
 }
