view employee and doctors and home page functional.

--- a/frontend/static/css/home.css
+++ b/frontend/static/css/home.css
@@ -4,7 +4,7 @@ body {
 header {
     background-color: #f90;
     color: #fff;
-    padding-top: 4px;
+    padding: 4px !important;
     text-align: center;
     font-size: 13px;
 }
