--- a/frontend/management/templates/doctor.html
+++ b/frontend/management/templates/doctor.html
@@ -17,38 +17,40 @@
         <div class="col-md-10">
             <div class="table-content" id="viewEmployees_content">
                 <div class="text-center mb-4">
-                    <h3>Employee Information</h3>
-                    <p class="lead">Explore the details of all employees in the organization below:</p>
+                    <h3>Doctors Information</h3>
+                    <p class="lead">Explore the details of all Doctors in the organization below:</p>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Employee ID</th>
+                                <th>EmployeeID</th>
                                 <th>SSN</th>
                                 <th>Full Name</th>
                                 <th>Address</th>
                                 <th>Salary</th>
                                 <th>Date Hired</th>
-                                <th>Job Class</th>
-                                <th>Facility ID</th>
+                                <th>FacilityID</th>
+                                <th>Speciality</th>
+                                <th>BC Date</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for employee in employees %}
+                            {% for doctor in doctors %}
                             <tr>
-                                <td>{{ employee.EmployeeID }}</td>
-                                <td>{{ employee.SSN }}</td>
-                                <td>{{ employee.FirstName }} {{ employee.MiddleName }} {{ employee.LastName }}</td>
-                                <td class="truncate-text">{{ employee.Street }}, {{ employee.City }}, {{ employee.State }} {{ employee.Zip }}</td>
-                                <td>{{ employee.Salary }}</td>
-                                <td>{{ employee.Date_Hired }}</td>
-                                <td>{{ employee.Job_Class }}</td>
-                                <td>{{ employee.Fac_ID }}</td>
+                                <td>{{ doctor.EmployeeID }}</td>
+                                <td>{{ doctor.SSN }}</td>
+                                <td>{{ doctor.EmpFirstName }} {{ doctor.EmpMiddleName }} {{ doctor.EmpLastName }}</td>
+                                <td class="truncate-text">{{ doctor.EmpStreet }}, {{ doctor.EmpCity }}, {{ doctor.EmpState }} {{ doctor.EmpZip }}</td>
+                                <td>{{ doctor.EmpSalary }}</td>
+                                <td>{{ doctor.EmpDateHired }}</td>
+                                <td>{{ doctor.EmpFacilityID }}</td>
+                                <td>{{ doctor.Speciality }}</td>
+                                <td>{{ doctor.Board_Certification_Date }}</td>
                             </tr>
                             {% empty %}
                             <tr>
-                                <td colspan="8">No employees found.</td>
+                                <td colspan="10">No doctors found.</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -56,26 +58,30 @@
                 </div>
                 <!-- Pagination -->
                 <ul class="pagination justify-content-center">
-                    {% if employees.has_previous %}
+                    {% if doctors.has_previous %}
                         <li class="page-item">
                             <a class="page-link" href="?page=1">&laquo; First</a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ employees.previous_page_number }}">Previous</a>
+                            <a class="page-link" href="?page={{ doctors.previous_page_number }}">Previous</a>
                         </li>
                     {% endif %}
+                    {% if doctors.has_previous and doctors.has_next %}
                     <li class="page-item disabled">
-                        <a class="page-link" href="#">Page {{ employees.number }} of {{ employees.paginator.num_pages }}</a>
+                        <a class="page-link" href="#">Page {{ doctors.number }} of {{ total_pages }}</a>
                     </li>
-                    {% if employees.has_next %}
+                    {% endif %}
+                    {% if doctors.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ employees.next_page_number }}">Next</a>
+                            <a class="page-link" href="?page={{ doctors.next_page_number }}">Next</a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ employees.paginator.num_pages }}">Last &raquo;</a>
+                            <a class="page-link" href="?page={{ total_pages }}">Last &raquo;</a>
                         </li>
                     {% endif %}
-                   </ul>
+                </ul>
+
+                
             </div>
         </div>
     </div>
