--- a/frontend/static/css/employee.css
+++ b/frontend/static/css/employee.css
@@ -3,6 +3,7 @@
     padding-top: 20px;
     height: 100%;
 }
+
 .vertical-nav a {
     display: block;
     color: #fff;
@@ -10,18 +11,34 @@
     text-decoration: none;
     transition: background-color 0.3s;
 }
+
 .vertical-nav a:hover {
     background-color: #555;
 }
-.vertical-nav-col{
+
+.vertical-nav-col {
     margin: 0px;
     padding: 0px;
 }
+
+
 /* Styling for table content */
+
 .table-content {
     padding: 20px;
 }
-.list-group-item.active-tab {
-    background-color: #f0f0f0; /* Light grey background */
-    font-weight: bold; /* Bold text */
+
+.list-group-item.list-group-item-action.active-tab {
+    background-color: #f0f0f0 !important;
+    /* Light grey background */
+    font-weight: bold !important;
+    /* Bold text */
+}
+
+.truncate-text {
+    max-width: 220px;
+    /* Adjust max-width as needed */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
