--- a/frontend/static/css/navBar.css
+++ b/frontend/static/css/navBar.css
@@ -1,21 +1,21 @@
-nav {
+.horizontal-nav {
     background-color: #333;
     padding: 10px 0;
     text-align: center;
 }
 
-nav ul {
+.horizontal-nav-ui {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-nav ul li {
+.horizontal-nav-li {
     display: inline;
     position: relative;
 }
 
-nav ul li a {
+.horizontal-nav-li a {
     text-decoration: none;
     color: #fff;
     padding: 10px 20px;
@@ -23,13 +23,13 @@ nav ul li a {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-nav ul li a:hover,
-nav ul li a.active {
+.horizontal-nav-li a:hover,
+.horizontal-nav-li a.active {
     background-color: rgba(100, 100, 100, 0.7);
     color: #fff;
 }
 
-nav ul li:not(:last-child):after {
+.horizontal-nav-li:not(:last-child):after {
     content: "|";
     color: #ccc;
     margin-left: 10px;
