--- a/frontend/static/css/employee.css
+++ b/frontend/static/css/employee.css
@@ -42,3 +42,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+table {
+    font-size: 13px;
+    /* Adjust the font size as needed */
+}
