--- a/frontend/management/templates/employee/doctor.html
+++ b/frontend/management/templates/employee/doctor.html
@@ -6,19 +6,19 @@
     <div class="row">
         <div class="col-md-2 vertical-nav-col">
             <div class="list-group">
-                <a href="{% url 'view_employee' %}" class="list-group-item list-group-item-action {% if '/employee/' in request.path %}active-tab{% endif %}" id="viewEmployees">All Employee</a> 
-                <a href="{% url 'view_doctor' %}" class="list-group-item list-group-item-action {% if '/doctor/' in request.path %}active-tab{% endif %}" id="viewDoctor">Doctor</a>
-                <a href="{% url 'view_nurse' %}" class="list-group-item list-group-item-action {% if '/nurse/' in request.path %}active-tab{% endif %}" id="viewNurse">Nurse</a>
-                <a href="{% url 'view_admin_staff' %}" class="list-group-item list-group-item-action {% if '/admin_staff/' in request.path %}active-tab{% endif %}" id="viewAdStaff">Admin Staff</a>
-                <a href="{% url 'view_hcp' %}" class="list-group-item list-group-item-action {% if '/hcp/' in request.path %}active-tab{% endif %}" id="viewHCP">HCP</a>
-                <a href="{% url 'view_employee_assignment' %}" class="list-group-item list-group-item-action {% if '/employee_assignment/' in request.path %}active-tab{% endif %}" id="viewEmpAssigment">Employee Assignments</a>
+                <a href="{% url 'view_employee' %}" class="list-group-item list-group-item-action" id="viewEmployees">All Employee</a> 
+                <a href="{% url 'view_doctor' %}" class="list-group-item list-group-item-action active-tab" id="viewDoctor">Doctor</a>
+                <a href="{% url 'view_nurse' %}" class="list-group-item list-group-item-action" id="viewNurse">Nurse</a>
+                <a href="{% url 'view_admin_staff' %}" class="list-group-item list-group-item-action" id="viewAdStaff">Admin Staff</a>
+                <a href="{% url 'view_hcp' %}" class="list-group-item list-group-item-action" id="viewHCP">HCP</a>
+                <a href="{% url 'add_employee' %}" class="list-group-item list-group-item-action" id="addEmployee">Add Employee</a>
             </div>
         </div>        
         <div class="col-md-10">
             <div class="table-content" id="viewEmployees_content">
                 <div class="text-center mb-4">
                     <h3>Doctors Information</h3>
-                    <p class="lead">Explore the details of all Doctors in the organization below:</p>
+                    <p class="lead">Explore the details of all doctors in the organization below:</p>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
@@ -66,9 +66,9 @@
                             <a class="page-link" href="?page={{ doctors.previous_page_number }}">Previous</a>
                         </li>
                     {% endif %}
-                    {% if doctors.has_previous and doctors.has_next %}
+                    {% if doctors.has_previous or doctors.has_next %}
                     <li class="page-item disabled">
-                        <a class="page-link" href="#">Page {{ doctors.number }} of {{ total_pages }}</a>
+                        <a class="page-link" href="#">Page {{ doctors.number }} of {{ doctors.paginator.num_pages }}</a>
                     </li>
                     {% endif %}
                     {% if doctors.has_next %}
@@ -76,7 +76,7 @@
                             <a class="page-link" href="?page={{ doctors.next_page_number }}">Next</a>
                         </li>
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ total_pages }}">Last &raquo;</a>
+                            <a class="page-link" href="?page={{ doctors.paginator.num_pages }}">Last &raquo;</a>
                         </li>
                     {% endif %}
                 </ul>
