--- a/frontend/management/templates/employee/employee.html
+++ b/frontend/management/templates/employee/employee.html
@@ -6,20 +6,40 @@
     <div class="row">
         <div class="col-md-2 vertical-nav-col">
             <div class="list-group">
-                <a href="{% url 'view_employee' %}" class="list-group-item list-group-item-action {% if '/employee/' in request.path %}active-tab{% endif %}" id="viewEmployees">All Employee</a> 
-                <a href="{% url 'view_doctor' %}" class="list-group-item list-group-item-action {% if '/doctor/' in request.path %}active-tab{% endif %}" id="viewDoctor">Doctor</a>
-                <a href="{% url 'view_nurse' %}" class="list-group-item list-group-item-action {% if '/nurse/' in request.path %}active-tab{% endif %}" id="viewNurse">Nurse</a>
-                <a href="{% url 'view_admin_staff' %}" class="list-group-item list-group-item-action {% if '/admin_staff/' in request.path %}active-tab{% endif %}" id="viewAdStaff">Admin Staff</a>
-                <a href="{% url 'view_hcp' %}" class="list-group-item list-group-item-action {% if '/hcp/' in request.path %}active-tab{% endif %}" id="viewHCP">HCP</a>
-                <a href="{% url 'view_employee_assignment' %}" class="list-group-item list-group-item-action {% if '/employee_assignment/' in request.path %}active-tab{% endif %}" id="viewEmpAssigment">Employee Assignments</a>
+                <a href="{% url 'view_employee' %}" class="list-group-item list-group-item-action active-tab" id="viewEmployees">All Employee</a> 
+                <a href="{% url 'view_doctor' %}" class="list-group-item list-group-item-action " id="viewDoctor">Doctor</a>
+                <a href="{% url 'view_nurse' %}" class="list-group-item list-group-item-action " id="viewNurse">Nurse</a>
+                <a href="{% url 'view_admin_staff' %}" class="list-group-item list-group-item-action" id="viewAdStaff">Admin Staff</a>
+                <a href="{% url 'view_hcp' %}" class="list-group-item list-group-item-action " id="viewHCP">HCP</a>
+                <a href="{% url 'add_employee' %}" class="list-group-item list-group-item-action" id="addEmployee">Add Employee</a>
             </div>
         </div>        
         <div class="col-md-10">
             <div class="table-content" id="viewEmployees_content">
                 <div class="text-center mb-4">
                     <h3>Employee Information</h3>
+                    <br>
+                    <div class="row" style="justify-content: center">
+                        <div class="col-md-2">
+                            <button id="viewBtn" type="button" class="btn btn-secondary" disabled>View</button>
+                        </div>
+                        <div class="col-md-4">
+                            <select id="employeeIdDropdown" class="form-control">
+                                <option value="" disabled selected>Select Employee ID</option>
+                                {% for employee in employees %}
+                                    <option value="{{ employee.EmployeeID }}">{{ employee.EmployeeID }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        
+                        <div class="col-md-2">
+                            <button id="editBtn" type="button" class="btn btn-secondary" disabled>Edit</button>
+                        </div>
+                    </div>
+                    <br>
                     <p class="lead">Explore the details of all employees in the organization below:</p>
                 </div>
+                
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
@@ -80,5 +100,18 @@
         </div>
     </div>
 </div>
+<script>
+    document.getElementById('employeeIdDropdown').addEventListener('change', function() {
+        var viewBtn = document.getElementById('viewBtn');
+        var editBtn = document.getElementById('editBtn');
+        if (this.value !== '') {
+            viewBtn.disabled = false;
+            editBtn.disabled = false;
+        } else {
+            viewBtn.disabled = true;
+            editBtn.disabled = true;
+        }
+    });
+</script>
 
 {% endblock content %}
