EDIT EMPLOYEE UI IMPLEMENTED

--- a/frontend/management/templates/employee/doctor.html
+++ b/frontend/management/templates/employee/doctor.html
@@ -7,11 +7,13 @@
         <div class="col-md-2 vertical-nav-col">
             <div class="list-group">
                 <a href="{% url 'view_employee' %}" class="list-group-item list-group-item-action" id="viewEmployees">All Employee</a> 
-                <a href="{% url 'view_doctor' %}" class="list-group-item list-group-item-action active-tab" id="viewDoctor">Doctor</a>
-                <a href="{% url 'view_nurse' %}" class="list-group-item list-group-item-action" id="viewNurse">Nurse</a>
+                <a href="{% url 'view_doctor' %}" class="list-group-item list-group-item-action  active-tab" id="viewDoctor">Doctor</a>
+                <a href="{% url 'view_nurse' %}" class="list-group-item list-group-item-action " id="viewNurse">Nurse</a>
                 <a href="{% url 'view_admin_staff' %}" class="list-group-item list-group-item-action" id="viewAdStaff">Admin Staff</a>
-                <a href="{% url 'view_hcp' %}" class="list-group-item list-group-item-action" id="viewHCP">HCP</a>
+                <a href="{% url 'view_hcp' %}" class="list-group-item list-group-item-action " id="viewHCP">HCP</a>
                 <a href="{% url 'add_employee' %}" class="list-group-item list-group-item-action" id="addEmployee">Add Employee</a>
+                <a href="{% url 'edit_employee' %}" class="list-group-item list-group-item-action" id="editEmployee">Edit Employee</a>
+            
             </div>
         </div>        
         <div class="col-md-10">
