--- a/frontend/management/templates/employee/employee.html
+++ b/frontend/management/templates/employee/employee.html
@@ -12,31 +12,14 @@
                 <a href="{% url 'view_admin_staff' %}" class="list-group-item list-group-item-action" id="viewAdStaff">Admin Staff</a>
                 <a href="{% url 'view_hcp' %}" class="list-group-item list-group-item-action " id="viewHCP">HCP</a>
                 <a href="{% url 'add_employee' %}" class="list-group-item list-group-item-action" id="addEmployee">Add Employee</a>
+                <a href="{% url 'edit_employee' %}" class="list-group-item list-group-item-action" id="editEmployee">Edit Employee</a>
+            
             </div>
         </div>        
         <div class="col-md-10">
             <div class="table-content" id="viewEmployees_content">
                 <div class="text-center mb-4">
                     <h3>Employee Information</h3>
-                    <br>
-                    <div class="row" style="justify-content: center">
-                        <div class="col-md-2">
-                            <button id="viewBtn" type="button" class="btn btn-secondary" disabled>View</button>
-                        </div>
-                        <div class="col-md-4">
-                            <select id="employeeIdDropdown" class="form-control">
-                                <option value="" disabled selected>Select Employee ID</option>
-                                {% for employee in employees %}
-                                    <option value="{{ employee.EmployeeID }}">{{ employee.EmployeeID }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        
-                        <div class="col-md-2">
-                            <button id="editBtn" type="button" class="btn btn-secondary" disabled>Edit</button>
-                        </div>
-                    </div>
-                    <br>
                     <p class="lead">Explore the details of all employees in the organization below:</p>
                 </div>
                 
