--- a/frontend/management/templates/employee/edit_employee.html
+++ b/frontend/management/templates/employee/edit_employee.html
@@ -41,7 +41,8 @@
                                 </div></div></form></center>
                                 <br>
                                 {% if employee_details %}
-                                <form method="post">
+                                <form action="{% url 'edit_employee' %}" method="POST">
+                                    <input type="text" name="employee_id" value="{{ employee_details.EmployeeID }}"" hidden>
                                     {% csrf_token %}
                                     <div class="row">
                                         <div class="col-md-4">
