--- a/frontend/management/templates/facility/office_building.html
+++ b/frontend/management/templates/facility/office_building.html
@@ -9,7 +9,7 @@
                 <a href="{% url 'view_facility' %}" class="list-group-item list-group-item-action " id="viewFacilities">Facilities List</a>
                 <a href="{% url 'view_ob' %}" class="list-group-item list-group-item-action active-tab" id="viewFacilities">Office Building</a>
                 <a href="{% url 'view_ops' %}" class="list-group-item list-group-item-action " id="viewFacilities">Outpatient Surgery</a>
-                <a href="{% url 'view_facility' %}" class="list-group-item list-group-item-action " id="viewFacilities">Add Facility</a>
+                <a href="{% url 'create_facility' %}" class="list-group-item list-group-item-action " id="viewFacilities">Add Facility</a>
                 <a href="{% url 'view_facility' %}" class="list-group-item list-group-item-action " id="viewFacilities">Edit Facility</a>  
             </div>
         </div>        
